assets/css/main.css
/* ... */
b,strong {
    font-weight: bold
}

dfn {
    font-style: italic
}

h1 {
    font-size: 2em;
    margin: .67em 0
}

mark {
    background: #ff0;
    color: #000
}

small {
    font-size: 80%
}

sub,sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline
}

sup {
    top: -.5em
}

sub {
    bottom: -.25em
}

img {
    border: 0
}

svg:not(:root) {
    overflow: hidden
}

figure {
    margin: 1em 40px
}

hr {
    box-sizing: content-box;
    height: 0
}

pre {
    overflow: auto
}

code,kbd,pre,samp {
    font-family: monospace,monospace;
    font-size: 1em
}

button,input,optgroup,select,textarea {
    color: inherit;
    font: inherit;
    margin: 0
}

button {
    overflow: visible
}

button,select {
    text-transform: none
}

button,html input[type="button"],input[type="reset"],input[type="submit"] {
    -webkit-appearance: button;
    cursor: pointer
}

button[disabled],html input[disabled] {
    cursor: default
}

button::-moz-focus-inner,input::-moz-focus-inner {
    border: 0;
    padding: 0
}

input {
    line-height: normal
}

input[type="checkbox"],input[type="radio"] {
    box-sizing: border-box;
    padding: 0
}

input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button {
    height: auto
}

input[type="search"] {
    -webkit-appearance: textfield;
    box-sizing: content-box
}

input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration {
    -webkit-appearance: none
}

fieldset {
    border: 1px solid #c0c0c0;
    margin: 0 2px;
    padding: .35em .625em .75em
}

legend {
    border: 0;
    padding: 0
}

textarea {
    overflow: auto
}

optgroup {
    font-weight: bold
}

table {
    border-collapse: collapse;
    border-spacing: 0
}

td,th {
    padding: 0
}

a {
    -webkit-tap-highlight-color: rgba(0,0,0,0)
}

@font-face {
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 300;
    src: local('Open Sans Light'),local('OpenSans-Light'),url("https://fonts.gstatic.com/s/opensans/v10/DXI1ORHCpsQm3Vp6mXoaTRampu5_7CjHW5spxoeN3Vs.woff2") format('woff2')
}

@font-face {
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 800;
    src: local('Open Sans Extrabold'),local('OpenSans-Extrabold'),url("https://fonts.gstatic.com/s/opensans/v10/EInbV5DfGHOiMmvb1Xr-hiYtBUPDK3WL7KRKS_3q7OE.woff2") format('woff2')
}

h1,h2,h3,h4 {
    font-family: 'Open Sans',sans-serif;
    font-weight: 800;
    font-style: normal
}

@-webkit-keyframes animateGradient {
    0% {
        background-position: 100% 90%
    }

    99% {
        background-position: 0% 90%
    }

    100% {
        background-position: 0% 90%;
        background-size: 200% 7px
    }
}

@keyframes animateGradient {
    0% {
        background-position: 100% 90%
    }

    99% {
        background-position: 0% 90%
    }

    100% {
        background-position: 0% 90%;
        background-size: 200% 7px
    }
}

.icons-home {
    text-align: center;
	padding-bottom: 30px;
}

.icons-home a {
    display: inline-block;
    padding: .938rem;
    margin: .125rem;
    border-radius: 50%;
    border: .125rem solid #fff;
    line-height: 0;
    transition: all .7s;
}

.icons-home a .icon {
    fill: #fff;
    width: 18px;
    height: 18px;
}

@media only screen and (min-width: 37.5rem) {
    .icons-home a .icon {
        width:30px;
        height: 30px
    }
}

.icons-home a:hover {
    background: #fff;
}

.icons-home a:hover .icon {
    fill: #30373d
}

.down {
    position: absolute;
    bottom: 50px;
    width: 100%;
    display: block;
    text-align: center;
}

.down .icon {
    position: absolute;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
    width: 100px;
    height: 100px;
    fill: #fff;
    -webkit-animation: pulse 1.3s infinite;
    animation: pulse 1.3s infinite
}

.icon-arrow-menu {
    vertical-align: bottom;
    width: 18px;
    height: 15px
}

#heart {
    color: #e41515
}

*,*:before,*:after {
    box-sizing: border-box
}

body {
    left: 0;
    right: 0;
    margin: auto
}

a,aside,.overlay,body {
    transition: all .25s ease
}

a.slideButton,.dosearch {
    position: absolute;
    display: block;
    width: 40px;
    height: 40px;
    top: 10px;
    z-index: 31
}

.slideButton {
    left: 10px
}

.dosearch {
    right: 10px;
    background: #54456e;
    border-radius: .188rem;
    padding: .125rem .188rem
}

.icon-menu {
    cursor: pointer;
    padding: .313rem;
    border-radius: .188rem;
    background: #54456e;
    width: 2.5rem;
    height: 2.5rem;
    fill: #fff
}

.icon-search {
    width: 2.188rem;
    height: 2.188rem
}

.overlay {
    cursor: pointer
}

#close {
    display: none
}

aside {
    position: fixed;
    height: 163px;
    width: 100%;
    bottom: -100%;
    background: #2f2f33;
    z-index: 20;
    box-shadow: inset -10px -1px 15px -9px rgba(0,0,0,0.5);
}

aside li {
    margin: 0;
    list-style-type: none
}

aside ul {
    margin: 0;
    padding: 0
}

aside #topmenu {
    background-color: #30373d;
    border: 2px solid #30373d;
    *zoom:1;}

aside #topmenu:before,aside #topmenu:after {
    content: '';
    display: table
}

aside #topmenu:after {
    clear: both
}

aside #topmenu ul {
    *zoom:1;float: left;
    clear: none;
    text-align: inherit;
    width: 63.95%;
    margin-left: 0%;
    margin-right: 3%;
}

aside #topmenu ul:before,aside #topmenu ul:after {
    content: '';
    display: table
}

aside #topmenu ul:after {
    clear: both
}

aside #topmenu ul:last-child {
    margin-right: 0%
}
/* ... */

